--- a/sonarqube-scanner/sonar-project.properties
+++ b/sonarqube-scanner/sonar-project.properties
@@ -1,4 +1,6 @@
-sonar.projectKey=org.sonarqube:sonarqube-scanner
+#sonar-project.properties for sonar-scanner-examples
+
+sonar.projectKey=ally-macgregor-sonarsource_sonar-scanning-examples_AYV8GCBlR7DiGoGDU29k
 sonar.projectName=Example of SonarQube Scanner Usage
 sonar.projectVersion=1.0
 
