--- a/sonarqube-scanner-gradle/gradle-basic/build.gradle
+++ b/sonarqube-scanner-gradle/gradle-basic/build.gradle
@@ -18,7 +18,8 @@ sonarqube {
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    //Jcenter()
+      mavenCentral()
 }
 
 dependencies {
